@startuml
package com.poo.T6_UsoAvanzado_ClasesObjetos.A_Herencia_Polimorfismo.B_RedesSociales {

    class Usuario {
        - String nombre
        - int edad
        - String nombreUsuario
        - int seguidores
        + Usuario(String nombre, int edad, String nombreUsuario, int seguidores)
        + void mostrarInfo()
    }

    class Streamer {
        - int numeroRetransmisiones
        - int horasDirecto
        + Streamer(String nombre, int edad, String nombreUsuario, int seguidores, int numeroRetransmisiones, int horasDirecto)
        + void mostrarInfo()
    }

    class Influencer {
        - ArrayList<String> colaboraciones
        + Influencer(String nombre, int edad, String nombreUsuario, int seguidores)
        + void mostrarInfo()
    }

    class Basico {
        + Basico(String nombre, int edad, String nombreUsuario, int seguidores)
        + void mostrarInfo()
    }

    Usuario <|-- Streamer
    Usuario <|-- Influencer
    Usuario <|-- Basico
}
@enduml
